[package]
name = "ytdl"
version = "0.1.0"
authors = ["600913 <600913@gmail.com>"]

[dependencies]
reqwest = "0.8.5"
url = "1.7.0"
structopt = "0.2.8"
serde = "1.0.59"
serde_json = "1.0.17"
serde_derive = "1.0.59"
log = "0.4.1"
fern = {version = "0.5.5", features = ["colored"]}

[dependencies.nom]
version = "^4.0"
features = ["regexp_macros"]
